Replace ClasspathDetector subclasses with Quarkus Capabilities API
Closes #651