@@ -3,26 +3,28 @@ package io.quarkiverse.httpproblem.deployment;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 
-import java.util.Collections;
 import java.util.Map;
+import java.util.Set;
 
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.CsvSource;
 
 import io.quarkus.deployment.Capabilities;
+import io.quarkus.deployment.Capability;
 import io.quarkus.runtime.configuration.ConfigurationException;
 
 class ProblemProcessorTest {
 
-    static final Capabilities CAPABILITIES_WITH_JSON = new Capabilities(Collections.singleton("io.quarkus.jackson"));
-    static final Capabilities CAPABILITIES_WITHOUT_JSON = new Capabilities(Collections.singleton("io.quarkus.resteasy"));
+    static final Capabilities CAPABILITIES_WITH_JACKSON = new Capabilities(Set.of(Capability.JACKSON));
+    static final Capabilities CAPABILITIES_WITH_JSONB = new Capabilities(Set.of(Capability.JSONB));
+    static final Capabilities CAPABILITIES_WITHOUT_JSON = new Capabilities(Set.of(Capability.RESTEASY));
 
     final ProblemProcessor problemProcessor = new ProblemProcessor();
 
     @Test
     void featureNameShouldBeValid() {
-        assertThat(problemProcessor.createFeature(CAPABILITIES_WITH_JSON).getName())
+        assertThat(problemProcessor.createFeature(CAPABILITIES_WITH_JACKSON).getName())
                 .isEqualTo("http-problem");
     }
 
@@ -31,6 +33,12 @@ class ProblemProcessorTest {
         assertThatThrownBy(() -> problemProcessor.createFeature(CAPABILITIES_WITHOUT_JSON))
                 .isInstanceOf(ConfigurationException.class)
                 .hasMessageContaining("quarkus-rest-jackson");
+    }
+
+    @Test
+    void shouldNotFailBuildForJsonbCapability() {
+        assertThat(problemProcessor.createFeature(CAPABILITIES_WITH_JSONB).getName())
+                .isEqualTo("http-problem");
     }
 
     @ParameterizedTest
